# adas_system

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  RESULTS.md  Untitled.ipynb  download_models.py  new 1.txt  pyproject.toml  requirements.txt  run_tensorboard_in_notebook_dir.sh  tesseract_test.py
SignDetector&Classifier/data/: R_MERGED_STAGE1.csv  STOCK_SIGNS.csv  sign_to_number.csv
SignDetector&Classifier/notebooks/: 1_1_Classifier_Issue4.ipynb  2_0_YoloDetection.ipynb  COMPOSER.ipynb  DetectorVideoTest.ipynb  FewShotLearning.ipynb
SignDetectorAndClassifier/: metrics.md  tesseract_test.py
SignDetectorAndClassifier/data/: RTDS_DATASET.csv  R_MERGED_STAGE1.csv  R_MERGED_STAGE2.csv  STOCK_SIGNS.csv  USER_FULL_FRAMES.csv  encoder_config.json  full-gt.csv  number_to_sign.csv  sign_to_number.csv
SignDetectorAndClassifier/docs/: преза ADAS.pptx
SignDetectorAndClassifier/notebooks/: 1.0.ClassifierResearch.ipynb  1_0_ClassifierResearch.ipynb  1_1_Classifier_Issue4.ipynb  2_0_YoloDetection.ipynb  35-winter-augmentation.ipynb  3_24_25_sub_classifier.ipynb  COMPOSER.ipynb  DetectorVideoTest.ipynb  FewShotLearning.ipynb  FewShotLearning_EncoderMetrics_RTDS.ipynb  FewShotLearning_LearnEncoder_RTDS.ipynb  FewShotLearning_MNIST.ipynb  FewShotLearning_Omni.ipynb  FewShotLearning_RTDS.ipynb  PlotlyHoverTest.ipynb  README.md  RTDS-DatasetSplitter4Encoder.ipynb  RTSD-R_MERGED.ipynb  ResultingEncoderClassifierMetrics.ipynb  subclassifier_test.ipynb  tesseract_test.ipynb
SignDetectorAndClassifier/screenshots/: detector_classifier2.jiff
data/: gt.csv  number_to_sign.csv
example/: manual_test.py  manual_test_composer.py  manual_test_single_classifier.py
maddrive_adas/: __init__.py  val.py
maddrive_adas/cli/: cityscapes_download.py  rtsd_convert_dataset.py  rtsd_convert_voc.py  rtsd_download.py  rtsd_generate_voc.py
maddrive_adas/models/: common.py  experimental.py  yolo.py
maddrive_adas/sign_det/: base.py  classifier.py  composer.py  detector.py  yolo_detector.py
maddrive_adas/src/: __init__.py
maddrive_adas/tools/: anchors.py
maddrive_adas/train/: callbacks.py  datasets.py  inference.py  operations.py  (+1 more)
notebooks/: 1.0.ClassifierResearch.ipynb  1.1.Classifier_Issue4.ipynb  1_1_Classifier_Issue4.ipynb  1_ClassifierResearch.ipynb  1_ClassifierResearch_REFACTOR.ipynb  1_ClassifierResearch_REFACTOR_NEW_EVALUATE.ipynb  1_ClassifierResearch_old.ipynb  2.0.YoloDetection.ipynb  2_YoloDetection.ipynb  2_YoloDetection.py  COMPOSER.ipynb  FullJCNN2013_explorer.ipynb  GTSRB_explorer.ipynb  RTSD-R_MERGED.ipynb  Untitled.ipynb  VideoTest.ipynb  _temp.ipynb  colab_vs_local.ipynb  gt.csv  rtsd-r3-full-frame-to-YOLO-format.ipynb  rtsd_data_research.ipynb  rtsd_detection.ipynb  utils.ipynb
screenshots/: detector_classifier2.jiff
scripts/: sign_detector.py  start-jupyterlab.sh  test_composer.py  test_detector.py  train_detector.py
segmentation/: color_col.json  unet_a2d2_gg.ipynb
tests/: conftest.py  test_checkpoint.py  test_composer.py  test_signs_classifier.py  test_signs_detector.py
(+105 files in other folders)
