[tool.poetry]
name = "maddrive-adas"
version = "0.1.0.dev0"
description = ""
authors = ["LSD-Maddrive"]
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

readme = 'README.md'
packages = [
    { include = "maddrive_adas" },
]

[tool.poetry.scripts]
mdda-rtsd-download = "maddrive_adas.cli.rtsd_download:main"
mdda-rtsd-generate-voc = "maddrive_adas.cli.rtsd_generate_voc:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pandas = "^1.4.2"
numpy = "^1.22.3"
pytorch-metric-learning = "^1.3.0"
faiss-cpu = "^1.7.2"
opencv-python-headless = "^4.6.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
matplotlib = "^3.5.2"
albumentations = "^1.1.0"
python-benedict = "^0.25.1"
click = "^8.1.3"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
nbdime = "^3.1.1"
pre-commit = "^2.18.1"
jupyter-dash = "^0.4.2"
plotly = "^5.7.0"
opencv-python = "^4.6.0"
ipywidgets = "^7.7.0"
ipykernel = "^6.12.1"
XlsxWriter = "^3.0.3"
tensorboard = "^2.8.0"
seaborn = "^0.11.2"
scipy = "^1.8.0"
pytest = "^7.1.1"
black = "^22.3.0"
pyproject-flake8 = "^0.0.1-alpha.3"
autopep8 = "^1.6.0"
jupyterlab = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 100
# Setting this true may break VSCode-black integration
color = false

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
